# TradeMatcher

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Order.cpp  Order.h  README.md  TradeEngine.cpp  TradeEngine.h  TradeMatcher  TradeMatcher.cbp  User.cpp  cmake_install.cmake  main.cpp  test.cpp
source/: Order.cpp  Order.h  Trade.cpp  Trade.h  TradeEngine.cpp  TradeEngine.h  User.cpp  User.h  main.cpp
test/: test.cpp  test.h  testConcurrency.cpp  testConcurrency.h
